--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- public/index.html or index.html -->
+<link
+  href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500;600;700&display=swap"
+  rel="stylesheet"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>jewelshop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
